examples/test/testpolicy10482.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10482
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key41: value10
      key42: value46
      key43: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value32
          key41: value11
          key45: value24
      podSelector:
        matchLabels:
          key29: value7
          key8: value4
          key34: value26
